new commit from 10.2

--- a/src/webdevelopment.bib
+++ b/src/webdevelopment.bib
@@ -1,6 +1,14 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
 
+@ARTICLE{directory_spec,
+  author = {Baidu EFE team},
+  title = {项目目录结构规范},
+  owner = {guoyu},
+  timestamp = {2015.04.28},
+  url = {https://github.com/ecomfe/spec/blob/master/directory.md}
+}
+
 @MISC{static_web_page,
   author = {Wikipedia},
   title = {Static web page},
@@ -59,5 +67,14 @@
   owner = {guoyu},
   timestamp = {2013.11.27},
   url = {http://en.wikipedia.org/wiki/Web_development}
+}
+
+@ARTICLE{findable,
+  author = {一叶千鸟},
+  title = {让网站容易被发现},
+  year = {2009},
+  owner = {guoyu},
+  timestamp = {2015.04.20},
+  url = {http://blog.rexsong.com/?p=6077}
 }
 
