--- a/src/specification.tex
+++ b/src/specification.tex
@@ -10,7 +10,7 @@
 \chapter{Directory}
 
 
-项目目录结构规范\footnote{directory_spec}的设计目标是项目开发的目录结构保持一致，使容易理解并方便构建与管理。
+项目目录结构规范\footnote{directory\_spec}的设计目标是项目开发的目录结构保持一致，使容易理解并方便构建与管理。
 
 
 \begin{compactitem}
