--- a/src/webdevelopment.tex
+++ b/src/webdevelopment.tex
@@ -80,7 +80,7 @@
 %
 \usepackage{listings}
 \lstset{
-  basicstyle=\ttfamily,
+  basicstyle=\ttfamily\small,
   showstringspaces=false,
   commentstyle=\color{red},
   keywordstyle=\color{blue},
@@ -90,9 +90,9 @@
   basicstyle=\footnotesize\ttfamily,
   showstringspaces=false,
   showspaces=false,
-  numbers=left,
-  numberstyle=\footnotesize,
-  numbersep=9pt,
+  %numbers=left,
+  %numberstyle=\footnotesize,
+  %numbersep=9pt,
   tabsize=2,
   breaklines=true,
   showtabs=false,
@@ -150,7 +150,7 @@
 %lstlisting[language=JavsScript]
 % Taken from Lena Herrmann at 
 % http://lenaherrmann.net/2010/05/20/javascript-syntax-highlighting-in-the-latex-listings-package
-\definecolor{lightgray}{rgb}{.9,.9,.9}
+\definecolor{lightgray}{rgb}{.99,.99,.99}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
 \definecolor{purple}{rgb}{0.65,0.12,0.82}
 
@@ -267,8 +267,23 @@ morestring=[b]",
 
 \include{introduction}
 
+\include{specification}
 
+\include{server}
 
+\include{conf}
+
+\include{backup}
+
+\include{library}
+
+\include{framework}
+
+\include{test}
+
+\include{release}
+
+\include{security}
 
 
 
