--- a/src/webdevelopment.tex
+++ b/src/webdevelopment.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,adobefonts,11pt,UTF8]{book}
+\documentclass[a4paper,11pt,UTF8]{book}
 
 %type chinese characters
 \usepackage{ctex}
